<?xml version="1.0" encoding="utf-8"?>
<resources>
 
    <string name="app_name">DDI</string>
    <string name="action_settings">Settings</string>
    
   
    <string name="search_hint">Search names</string>
    <string name="bild_description">DDI Bild</string>
    
    <string name="name">Name </string>
    <string name="objectItem">Object Item</string>
    <string name="objectClass">Object Class</string>
    <string name="percipitantClass"> Precipitant Class</string>
    <string name="percipitantItem">Precipitant Item</string>
    <string name="info">Info </string>
    <string name="save">Speichern </string>
    <string name ="ddi_name">Name des Paares aus zwei Arztneimittelwechselwirkungen: </string>
    <string name ="status">Status: </string>
    
    <string name="search">Wechselwirkung Suchen</string>
    <string name="Mein_eigene_Arzneimittelliste">Wechselwirkung anlegen</string>
    <string name="Arzneimittelliste">Liste der Wechselwirkungen</string>    
     
    <string name = "Add_New"> Add New</string>
	
	<string name="edit">Edit DDI</string>
    <string name="delete">Delete DDI</string>
 
    <string name="infoapp">Alle Informationen sind ohne Gewähr.  </string>   
   
    <string name="title_activity_display_ddi">DisplayDDI</string>
 
</resources>