<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/search" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="84dp"        
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:src="@drawable/logo" />

    <Button
        android:id="@+id/Mein_eigene_Arzneimittelliste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Arzneimittelliste"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/Mein_eigene_Arzneimittelliste" />
    
    
    <Button
        android:id="@+id/Arzneimittelliste"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_search"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/Arzneimittelliste" />
 
</RelativeLayout>